--- a/Style.css
+++ b/Style.css
@@ -1,9 +1,24 @@
-.body{
-    margin: 0px;
+* {
+    padding: 0;
+    margin: auto;
+    font-family: 'Flexo Light', sans-serif;
 }
+
+.body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .main-content {
-    display: flex;    
-    align-content: center;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    align-items: center;
     background-color: aqua;
+    font-weight: 600;
 
 }
+
